Dockerize + IaC start

--- a/src/DevOpsQuickScan.Web/Components/Pages/Facilitator/Session.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/Facilitator/Session.razor
@@ -1,8 +1,7 @@
-﻿@page "/facilitator"
+﻿@page "/facilitator/session"
 @rendermode InteractiveServer
 @using DevOpsQuickScan.Domain
 @using DevOpsQuickScan.Infrastructure
-@using Microsoft.AspNetCore.Server.HttpSys
 @using Microsoft.AspNetCore.SignalR.Client
 @inject NavigationManager Navigation
 @inject SurveyReader SurveyReader
