--- a/src/DevOpsQuickScan.Web/Components/Layout/NavMenu.razor
+++ b/src/DevOpsQuickScan.Web/Components/Layout/NavMenu.razor
@@ -15,8 +15,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="facilitator">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Facilitator 
+            <NavLink class="nav-link" href="facilitator/session">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Session 
             </NavLink>
         </div>
 
