--- a/src/DevOpsQuickScan.Web/wwwroot/app.css
+++ b/src/DevOpsQuickScan.Web/wwwroot/app.css
@@ -59,7 +59,6 @@ h1:focus {
     text-align: start;
 }
 
-
 .quickscan-card {
     max-width: 400px;
     margin: 5rem auto;
@@ -68,6 +67,12 @@ h1:focus {
     background-color: white;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     text-align: center;
+}
+
+.quickscan-card-wide {
+    width: 60%;
+    max-width: 800px !important;
+    margin: 0 auto; 
 }
 
 .quickscan-logo {
