--- a/src/DevOpsQuickScan.Web/Components/Layout/MainLayout.razor
+++ b/src/DevOpsQuickScan.Web/Components/Layout/MainLayout.razor
@@ -2,7 +2,8 @@
 
 <div class="page">
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 d-flex align-items-center justify-content-between">
+            <img src="@Assets["/img/logo.jpg"]" height="40" alt="Logo" class="logo" />
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
