--- a/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/VotePage.razor
@@ -1,6 +1,5 @@
-@page "/vote/{SessionId}"
+@page "/vote/{SessionId}/{UserName}"
 @rendermode InteractiveServer
-
 
 <div class="quickscan-card quickscan-card-wide">
     <p>Voting session name: <strong>@_sessionName</strong></p>
@@ -32,53 +31,3 @@
         <p class="text-muted">Waiting for the next question...</p>
     }
 </div>
-
-@* <div class="quickscan-card quickscan-card-wide"> *@
-@*     <p>Survey session name: <strong>@_sessionName</strong></p> *@
-@* *@
-@*     <div class="mt-3"> *@
-@*         <p>Invite your team:</p> *@
-@*         <div class="d-flex align-items-center"> *@
-@*             <span class="me-2">@_inviteLink</span> *@
-@*             <button class="btn btn-secondary" @onclick="CopyToClipboard"> *@
-@*                 <i class="fa-solid fa-copy"></i> Copy Link *@
-@*             </button> *@
-@*         </div> *@
-@*     </div> *@
-@* *@
-@*     <hr class="my-4" /> *@
-@* *@
-@*     @if (_surveyData != null && _surveyData.Questions.Any()) *@
-@*     { *@
-@*         <div class="question-container"> *@
-@*             <div class="progress mb-3"> *@
-@*                 <div class="progress-bar" *@
-@*                      style="width: @((_currentQuestionIndex + 1) * 100 / _surveyData.Questions.Count)%"></div> *@
-@*             </div> *@
-@* *@
-@*             <div class="question-card"> *@
-@*                 <p class="question-text">@_surveyData.Questions[_currentQuestionIndex].Text</p> *@
-@*                 <div class="d-flex justify-content-between align-items-center"> *@
-@*                     <span *@
-@*                         class="text-muted">Question @(_currentQuestionIndex + 1) of @_surveyData.Questions.Count</span> *@
-@*                     <button class="btn btn-primary" *@
-@*                             @onclick="() => SendQuestion(_surveyData.Questions[_currentQuestionIndex].Id)"> *@
-@*                         Request vote (@GetNumberOfVotes(_surveyData.Questions[_currentQuestionIndex].Id)) *@
-@*                     </button> *@
-@*                 </div> *@
-@*             </div> *@
-@* *@
-@*             <div class="navigation-controls mt-4"> *@
-@*                 <button class="btn btn-outline-primary" @onclick="PreviousQuestion" *@
-@*                         disabled="@(_currentQuestionIndex == 0)"> *@
-@*                     <i class="fa-solid fa-chevron-left"></i> Previous *@
-@*                 </button> *@
-@*                 <button class="btn btn-outline-primary" @onclick="NextQuestion" *@
-@*                         disabled="@(_currentQuestionIndex >= _surveyData.Questions.Count - 1)"> *@
-@*                     Next <i class="fa-solid fa-chevron-right"></i> *@
-@*                 </button> *@
-@*             </div> *@
-@*         </div> *@
-@*     } *@
-@* </div> *@
-@* *@
