Add participants list, disable pre-render

--- a/src/DevOpsQuickScan.Web/Components/Pages/Home.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 @page "/"
-@rendermode InteractiveServer
-
+@using Microsoft.AspNetCore.Components.Endpoints
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 <PageTitle>Home</PageTitle>
 
 <div class="quickscan-card">
