--- a/src/DevOpsQuickScan.Web/Components/Pages/JoinPage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/JoinPage.razor
@@ -1,5 +1,5 @@
 @page "/join"
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
 <PageTitle>Home</PageTitle>
 
