--- a/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
@@ -1,4 +1,5 @@
 @page "/survey/{SessionName}"
+@using DevOpsQuickScan.Web.Components.CustomComponents
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 <div class="d-flex">
     <!-- Main Content -->
@@ -20,51 +21,32 @@
 
             @if (_currentQuestion != null)
             {
-                <div class="question-container">
-                    <div class="progress mb-3">
-                        <div class="progress-bar"
-                             style="width: @((SessionService.CurrentQuestionIndex + 1) * 100 / SessionService.Survey?.Questions.Count)%"></div>
-                    </div>
+                
+                <!--// Progress bar //-->
+                <div class="progress mb-3">
+                    <div class="progress-bar"
+                         style="width: @((SessionService.CurrentQuestionIndex + 1) * 100 / SessionService.Survey!.Questions.Count)%"></div>
+                </div>
+                
+                <QuestionComponent CurrentQuestion="_currentQuestion" />
 
-                    <div class="question-card">
-                        <p class="question-text">@_currentQuestion.Text</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                    <span
-                        class="text-muted">Question @(SessionService.CurrentQuestionIndex + 1) of @SessionService.Survey?.Questions.Count</span>
-
-                        </div>
-                    </div>
-
-                    <div class="answers-list mt-4">
-                        <p class="text-muted">Answers:</p>
-                        <ul class="list-group">
-                            @foreach (var answer in _currentQuestion.Answers)
-                            {
-                                <li class="list-group-item">
-                                    @answer.Text
-                                </li>
-                            }
-                        </ul>
-                    </div>
-
-                    <div class="navigation-controls mt-4">
-                        <button class="btn btn-outline-primary" @onclick="PreviousQuestion"
-                                disabled="@(SessionService.CurrentQuestionIndex == 0)">
-                            <i class="fa-solid fa-chevron-left"></i> Previous
-                        </button>
-                        <button class="btn btn-primary"
-                                @onclick="() => SendQuestion(_currentQuestion.Id)">
-                            Request vote (@GetNumberOfVotes(_currentQuestion.Id))
-                        </button>
-                        <button class="btn btn-primary"
-                                @onclick="() => SendQuestion(_currentQuestion.Id)">
-                            Reveal the answers (@GetNumberOfVotes(_currentQuestion.Id))
-                        </button>
-                        <button class="btn btn-outline-primary" @onclick="NextQuestion"
-                                disabled="@(SessionService.CurrentQuestionIndex >= SessionService.Survey?.Questions.Count - 1)">
-                            Next <i class="fa-solid fa-chevron-right"></i>
-                        </button>
-                    </div>
+                <div class="navigation-controls mt-4">
+                    <button class="btn btn-outline-primary" @onclick="PreviousQuestion"
+                            disabled="@(SessionService.CurrentQuestionIndex == 0)">
+                        <i class="fa-solid fa-chevron-left"></i> Previous
+                    </button>
+                    <button class="btn btn-primary"
+                            @onclick="() => SendQuestion(_currentQuestion.Id)">
+                        Request vote (@GetNumberOfVotes(_currentQuestion.Id))
+                    </button>
+                    <button class="btn btn-primary"
+                            @onclick="() => SendQuestion(_currentQuestion.Id)">
+                        Reveal the answers (@GetNumberOfVotes(_currentQuestion.Id))
+                    </button>
+                    <button class="btn btn-outline-primary" @onclick="NextQuestion"
+                            disabled="@(SessionService.CurrentQuestionIndex >= SessionService.Survey?.Questions.Count - 1)">
+                        Next <i class="fa-solid fa-chevron-right"></i>
+                    </button>
                 </div>
             }
         </div>
