--- a/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
@@ -14,14 +14,14 @@
                 <!--// Progress bar //-->
                 <div class="progress mb-3">
                     <div class="progress-bar"
-                         style="width: @((SessionService.CurrentQuestionIndex + 1) * 100 / SessionService.Survey!.Questions.Count)%"></div>
+                         style="width: @((CurrentSessionService.CurrentQuestionIndex + 1) * 100 / CurrentSessionService.Survey!.Questions.Count)%"></div>
                 </div>
 
                 <QuestionComponent CurrentQuestion="_currentQuestion"/>
 
                 <div class="navigation-controls mt-4">
                     <button class="btn btn-outline-primary" @onclick="PreviousQuestion"
-                            disabled="@(SessionService.CurrentQuestionIndex == 0)">
+                            disabled="@(CurrentSessionService.CurrentQuestionIndex == 0)">
                         <i class="fa-solid fa-chevron-left"></i> Previous
                     </button>
                     <button class="btn btn-primary"
@@ -33,7 +33,7 @@
                         Reveal the answers (@GetNumberOfVotes(_currentQuestion.Id))
                     </button>
                     <button class="btn btn-outline-primary" @onclick="NextQuestion"
-                            disabled="@(SessionService.CurrentQuestionIndex >= SessionService.Survey?.Questions.Count - 1)">
+                            disabled="@(CurrentSessionService.CurrentQuestionIndex >= CurrentSessionService.Survey?.Questions.Count - 1)">
                         Next <i class="fa-solid fa-chevron-right"></i>
                     </button>
                 </div>
