--- a/src/DevOpsQuickScan.Web/Components/Layout/MainLayout.razor
+++ b/src/DevOpsQuickScan.Web/Components/Layout/MainLayout.razor
@@ -3,8 +3,8 @@
 <div class="page">
     <main>
         <div class="top-row px-4 d-flex align-items-center justify-content-between">
-            <img src="@Assets["/img/logo.jpg"]" height="40" alt="Logo" class="logo" />
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="/"><img src="@Assets["/img/logo.jpg"]" height="50" alt="Logo" class="logo" /></a>
+            <a href="/about" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
