--- a/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
+++ b/src/DevOpsQuickScan.Web/Components/Pages/SurveyPage.razor
@@ -5,35 +5,30 @@
     <!-- Main Content -->
     <div class="flex-grow-1">
         <div class="quickscan-card quickscan-card-wide">
-
-
-            <hr class="my-4"/>
-
             @if (_currentQuestion != null)
             {
                 <!--// Progress bar //-->
                 <div class="progress mb-3">
-                    <div class="progress-bar"
-                         style="width: @((CurrentSessionService.CurrentQuestionIndex + 1) * 100 / CurrentSessionService.Survey!.Questions.Count)%"></div>
+                    <div class="progress-bar" style="width: @((SessionService.CurrentQuestionIndex + 1) * 100 / SessionService.NumberOfQuestions)%">@(SessionService.CurrentQuestionIndex + 1) of @SessionService.NumberOfQuestions</div>
                 </div>
 
                 <QuestionComponent CurrentQuestion="_currentQuestion"/>
 
                 <div class="navigation-controls mt-4">
                     <button class="btn btn-outline-primary" @onclick="PreviousQuestion"
-                            disabled="@(CurrentSessionService.CurrentQuestionIndex == 0)">
+                            disabled="@(SessionService.CurrentQuestionIndex == 0)">
                         <i class="fa-solid fa-chevron-left"></i> Previous
                     </button>
-                    <button class="btn btn-primary"
-                            @onclick="() => SendQuestion(_currentQuestion.Id)">
-                        Request vote (@GetNumberOfVotes(_currentQuestion.Id))
-                    </button>
-                    <button class="btn btn-primary"
-                            @onclick="() => SendQuestion(_currentQuestion.Id)">
-                        Reveal the answers (@GetNumberOfVotes(_currentQuestion.Id))
-                    </button>
+                    @* <button class="btn btn-primary" *@
+                    @*         @onclick="() => SendQuestion(_currentQuestion.Id)"> *@
+                    @*     Request vote (@GetNumberOfVotes(_currentQuestion.Id)) *@
+                    @* </button> *@
+                    @* <button class="btn btn-primary" *@
+                    @*         @onclick="() => SendQuestion(_currentQuestion.Id)"> *@
+                    @*     Reveal the answers (@GetNumberOfVotes(_currentQuestion.Id)) *@
+                    @* </button> *@
                     <button class="btn btn-outline-primary" @onclick="NextQuestion"
-                            disabled="@(CurrentSessionService.CurrentQuestionIndex >= CurrentSessionService.Survey?.Questions.Count - 1)">
+                            disabled="@(SessionService.CurrentQuestionIndex >= SessionService.NumberOfQuestions - 1)">
                         Next <i class="fa-solid fa-chevron-right"></i>
                     </button>
                 </div>
@@ -62,12 +57,12 @@
         <div class="mt-3">
             <h5>Participants</h5>
             <ul class="list-group">
-                @foreach (var participant in _participants)
-                {
-                    <li class="list-group-item">
-                        @participant.UserName
-                    </li>
-                }
+                @* @foreach (var participant in _participants) *@
+                @* { *@
+                @*     <li class="list-group-item"> *@
+                @*         @participant.UserName *@
+                @*     </li> *@
+                @* } *@
             </ul>
         </div>
     </div>
